🌱 jeorg-spring-flash-3-3 - 📺 - Fix Unit tests